syntax = "proto3";
package person;

import "google/protobuf/empty.proto";

option go_package = "github.com/siarhei-shliayonkin/learn-protobuf-grpc/pkg/proto;pb";

message Person {
    string first_name = 1; // the key for a Person
    string last_name = 2;
}

message PersonList {
    repeated Person person = 1;
}

message PersonRequest {
    string first_name = 1;
}

message StreamResponse {
    string message = 1;
}

service PersonService {
    rpc Add (Person) returns (Person) {}
    rpc Get (PersonRequest) returns (Person) {}
    rpc List (google.protobuf.Empty) returns (PersonList) {}
    rpc Delete (PersonRequest) returns (google.protobuf.Empty) {}
    // Streaming
    rpc BulkAdd (stream Person) returns (StreamResponse) {}
    rpc BulkGet (google.protobuf.Empty) returns (stream Person) {}
}
